replaced PUT with PATCH for safer updating of ressources
