# Week4_API/internal/api/router.go
@@ -15,6 +15,6 @@ func RegisterRoutes(e *echo.Echo, app *Application) {
 	v1.GET("/instances", app.ListInstances)
 	v1.GET("/instances/:id", app.GetInstance)
 	v1.POST("/instances", app.CreateInstance)
-	v1.PUT("/instances/:id/capacity", app.UpdateInstanceCapacity)
+	v1.PATCH("/instances/:id", app.PatchInstance)
 	v1.DELETE("/instances/:id", app.DeleteInstance)
 }
